This file documents the revision history for the Monitoring Webinterface Thruk.

next:
          - Bug Fixes
            - fixed quoting downtime tasks

1.74-2   Sat Jul 27 18:15:20 CEST 2013
          - show response from date/time check in quick commands
          - make sure IO::Socket::SSL is used for multiple parallel https connections
          - Bug Fixes
            - fixed display of hoverable downtimes comments
            - fixed pnp graph waiting icon
            - fixed rootid in statusmap when using filter
            - fixed clicking search result header
            - fixed reduced result set on json exports
            - fixed reading wrong encoded global user data file
            - fixed case-sensitive sorting on host/servicenames
            - fixed missing links in Nuvola theme side navigation

1.74     Sun Jul  7 17:39:32 CEST 2013
          - added filter to statusmap
          - performance improvements, only load jquery-ui if necessary
          - added several new force cmd options (awiddersheim)
          - added new cli command 'command' to print command line for hosts/service
          - panorama:
            - added readonly config parameter
          - config tool:
            - added pre/post save hooks
            - added history support (if config folder uses git)
            - fixed displaying wrong site in OMD environment
          - Bug Fixes
            - fixed sending duplicate commands (feraudet)
            - fixed closing preferences by document click

1.72-2   Fri Jun  7 15:51:47 CEST 2013
          - added sanity check when saving recurring downtimes
          - log host/service name when deleting downtimes/comments
          - Bug Fixes
            - missing filter in list of recurring downtime
            - fixed state_hosts for http backend

1.72     Tue Jun  4 18:42:50 CEST 2013
          - enable connection pool by default (only with 3 backends or more)
          - connection pool uses 90% less memory now