@@ -3,6 +3,7 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
 next:
           - Bug Fixes
             - fixed quoting downtime tasks
+            - show error instead of empty result for a single failed instance
 
 1.74-2   Sat Jul 27 18:15:20 CEST 2013
           - show response from date/time check in quick commands
